--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.4.0"
+    "react-loading-skeleton": "^3.4.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/md5": "^2.3.5",
